--- a/html/login.html
+++ b/html/login.html
@@ -34,8 +34,8 @@
                 <input class="form-control" id="txtLoginPassword" type="password">
             </div>
             <button type="button" class="btn btn-primary" id="btnLogin">Login</button>
-            <fb:login-button autologoutlink="true" onlogin="OnRequestPermission();" perms="user_about_me,email" scope="public_profile,email">
-            </fb:login-button>
+          <!--  <fb:login-button autologoutlink="true" onlogin="OnRequestPermission();" perms="user_about_me,email" scope="public_profile,email">
+            </fb:login-button>-->
         </div>
     </div>
     <script>
