--- a/html/parenteditclass.html
+++ b/html/parenteditclass.html
@@ -357,7 +357,7 @@
                             <div class="col-lg-12">
                                 <form class="form-horizontal">
                                     <div class="form-group required">
-                                        <label class="col-lg-1 labelform">หลักสูตร :</label>
+                                        <label class="col-lg-1 labelform">ลักษณะการเรียน :</label>
                                         <div class="col-lg-11">
                                             <div class="form-check">
                                                 <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="1" checked>
@@ -444,17 +444,17 @@
                         <div class="row">
                             <div class="form-group col-lg-12">
                                 <div class="col-lg-7">
-                                    <table class="table table-bordered pagin-table">
+                                    <table class="table table-bordered pagin-table dragorder">
                                         <thead>
                                             <tr>
                                                 <th width="50px">#</th>
                                                 <th>ปัจจัย</th>
                                             </tr>
                                         </thead>
-                                        <tbody id="sort-table">
+                                        <tbody id="sort-table" class="dragorder">
                                             <tr>
                                                 <td>1</td>
-                                                <td>เพศของติวเตอร์</td>
+                                                <td>เพศของติวเตอร์1</td>
                                             </tr>
                                             <tr>
                                                 <td>2</td>
