--- a/html/studenttutorspec.html
+++ b/html/studenttutorspec.html
@@ -29,7 +29,7 @@
         <div class="row">
             <div class="form-group col-lg-12">
                 <div class="col-lg-7">
-                    <table class="table table-bordered pagin-table">
+                    <table class="table table-bordered pagin-table dragorder">
                         <thead>
                             <tr>
                                 <th width="50px">#</th>
