--- a/html/tutorprofile.html
+++ b/html/tutorprofile.html
@@ -103,8 +103,8 @@
                         </div>
                         <div class="col-lg-6"></div>
                     </div>
-                    <div class="form-group required">
-                        <label for="pickerBirthdate" class="col-lg-2 labelform">วัน เดือน ปีเกิด</label>
+                    <div class="form-group">
+                        <label for="pickerBirthdate" class="col-lg-2 ">วัน เดือน ปีเกิด</label>
                         <div class="col-lg-4">
                             <div class="input-group">
                                 <div class="input-group-addon">
