--- a/html/publishJob.html
+++ b/html/publishJob.html
@@ -48,7 +48,7 @@
                 <div class="col-lg-12">
                     <form class="form-horizontal">
                         <div class="form-group required">
-                            <label class="col-lg-3 labelform">หลักสูตรที่สามารถสอนได้ :</label>
+                            <label class="col-lg-3 labelform">ความสามารถในการสอนภาษาอังกฤษ :</label>
                             <div class="col-lg-9 checkbox1">
                                 <input type="checkbox" id="chkEnglishFlag"> สามารถสอนโดยใช้เอกสารประกอบการเรียนเป็นภาษาอังกฤษ </input>
                                 <br>
