--- a/html/studenteditclass.html
+++ b/html/studenteditclass.html
@@ -63,7 +63,6 @@
                 <table id="gridEditClass" class="table table-condensed table-hover table-striped scroll">
                     <thead>
                         <tr>
-                            <th data-column-id="id" data-identifier="true" data-type="numeric" data-width="3%">#</th>
                             <th data-column-id="class" data-width="10%">วิชา</th>
                             <th data-column-id="level" data-width="15%">ระดับชั้น</th>
                             <th data-column-id="numStu" data-width="10%">จำนวนนักเรียน</th>
@@ -159,7 +158,7 @@
                             <div class="col-lg-12">
                                 <form class="form-horizontal">
                                     <div class="form-group required">
-                                        <label class="col-lg-1 labelform">หลักสูตร :</label>
+                                        <label class="col-lg-1 labelform">ลักษณะการเรียน :</label>
                                         <div class="col-lg-11">
                                             <div class="form-check">
                                                 <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="1" checked>
@@ -343,7 +342,7 @@
                         <div class="row">
                             <div class="form-group col-lg-12">
                                 <div class="col-lg-7">
-                                    <table class="table table-bordered pagin-table">
+                                    <table class="table table-bordered pagin-table dragorder">
                                         <thead>
                                             <tr>
                                                 <th width="50px">#</th>
@@ -870,7 +869,6 @@
 
         gridEditClass.bootgrid("append", [
             {
-                "id": i + 1,
                 "class": subjName,
                 "level": subcName,
                 "numStu": applySubject.numStu,
